--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-<<<<<<< HEAD
-*
-=======
 config/users.php
 config/config.php
-db/*
->>>>>>> 4b266d521ea83b4c1c926957aa628422206f4499
+db/db.sqlite
+classes/jwp_*
+languages/jwp_*
