add validation appropriate_heading_descending

--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -460,9 +460,15 @@ checks:
         1-3-1:
           - 1-3-1a
       level: *lv1
+      relations:
+        2-4-6:
+          - 2-4-6a
+        2-4-10:
+          - 2-4-10a
       name: 見出しタグ、強調タグなどを用いて、セマンティックなマークアップをしている
       tech: |
         情報の意味を要素の色、大きさ、位置のみで提供していないこと。文章はh*やstrongなどを用いて構造化し、CSSなしでもきちんと情報が伝わるようにすること。
+        見出しはh1〜h6が、順序良く降順になっているべきです。h1が大見出し、h2が中見出し、h3が小見出しだとすると、h1のつぎにh3が現れるのは不自然です。
         NGの例は「右の写真は……」「カレンダの赤いマスは……」「赤い文字の項目は必須項目です」というようなものが挙げられるだろう。ただし「写真の中の右上の人物は……」というような情報提供は、これにあたらない。また、この達成基準は、かならずしも、カレンダの休日を赤で表してはいけないとは<strong>言っていない</strong>ことに注意すべきです。色がわからない人にとっては、きちんとわかるように提供しつつも、色がわかる人がわかりやすいということを妨げる必要はありません。
 
     1-3-1b:
