--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -23,3 +23,7 @@ errors:
     message: 疑わしい要素があります
     criterion: 4-1-1
     code: 4-1-1a
+  appropriate_heading_descending:
+    message: 見出しの降順が妥当ではありません
+    criterion: 1-3-1
+    code: 1-3-1a
