参考資料、chekclistカウントの取り方

--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -154,7 +154,7 @@ checks:
       name: 画像、動画、音声が時間の経過に伴って変化する要素が存在し、一部、その機能を扱えない利用者が存在するが、その機能を説明している
       tech: |
         なにかの器具の操作の仕方を説明するgifアニメーションは、視覚障害者にとっては理解が難しいが、「器具の操作方法を説明するアニメーション」というような代替テキストをあてることで、機能が説明されたことになります。
-          演説を音声で提供している場合、それは書き起こしテキストを用意することで、「機能を扱える」ようになるので、こういった音声の代替テキストを「演説の音声」としてもこの項目は適合とならない。こういった音声の場合は、書き起こしテキストを用意すること。
+        演説を音声で提供している場合、それは書き起こしテキストを用意することで、「機能を扱える」ようになるので、こういった音声の代替テキストを「演説の音声」としてもこの項目は適合とならない。こういった音声の場合は、書き起こしテキストを用意すること。
       memo: |
         書籍の朗読の場合で、書き起こしテキストを用意すると、著作権を侵害しうるため、公開できないというような場合は？ 著作権法の中には、障害者についての例外（37条など）を定めているが、ウェブコンテンツの場合は、かならずしも受益者が障害者のみでないので、要注意と考えられます。とりあえず「朗読の音声。著作権保護の観点から書き起こしテキストは用意できない。」と説明することで適合、とすることで良いと考えられます。書籍名がわかれば、原典にあたることもできますので。
 
@@ -437,7 +437,7 @@ checks:
       name: 音声、映像、同期したメディアが存在するが、正確な代替コンテンツを用意してある
       tech: |
         ページ内のすべての、音声、映像（音声なし）、映像（音声あり、いわゆる「同期したメディア」）は、これらを正確に表現した「時間依存メディアの代替コンテンツ」を用意すること。「正確」にというのは、いわば脚本のように、詳しい状況説明を含んだ文章である必要がある。
-        メディアがインタラクティブな要素を持っている場合は、そのインタラクティブ性を備えている必要がある。たとえば、動画ではあるが、ある場面で進行がいったん停止し、閲覧者に選択肢を提示する。選択肢によっては以降の展開が変わるようなコンテンツであれば、その展開をハイパーリンクなどで提示して、はじめて「正確」といえる。
+        メディアがインタラクティブな要素を持っている場合は、そのインタラクティブ性を備えている必要がある。たとえば、動画ではあるが、ある場面で進行がいったん停止し、閲覧者に選択肢を提示する。選択肢によって以降の展開が変わるようなコンテンツであれば、その展開をハイパーリンクなどで提示して、はじめて「正確」といえる。
 
   1-2-9:
     1-2-9a:
@@ -489,7 +489,7 @@ checks:
           - 1-3-1c
       name: tableの各要素はthead、thなどを用いて適切にマークアップしている
       tech: |
-        表組みの場合は線形情報にして意味が通るようにすることが望ましい。またthead、thなどを正しく使えているとなお良い。表組みを線形情報にするのは、技術者なければ難しいかもしれません。原則は「左上から右下に向かって読んでいく」と考えてください。また、じっさいのスクリーンリーダで確認するのも有効です。
+        表組みの場合は線形情報にして意味が通るようにすることが望ましい。またthead、thなどを正しく使えているとなお良い。表組みを線形情報にするのは、技術者でなければ難しいかもしれません。原則は「左上から右下に向かって読んでいく」と考えてください。また、じっさいのスクリーンリーダで確認するのも有効です。
 
     1-3-1d:
       criterion: *c1-3-1
@@ -630,7 +630,7 @@ checks:
           - 1-4-9a
       name: コントラストが甘い箇所は、たいへん大きな文字か、ロゴか、誰にとっても意味のない飾りである
       tech: |
-        「たいへん大きな文字」とは、Understanding WCAG2.0には、「18ポイント又は太字の14ポイント」程度とあり、これはcmになおすとおよそ6mm程度の大きさの文字なのですが、ディスプレイにおいては、こういった絶対値が扱いづらいので、注意してください。大きな文字であれば、コントラスト比は3:1でもよいということになっています。
+        「たいへん大きな文字」とは、Understanding WCAG2.0には、「18ポイント又は太字の14ポイント」程度とあり、これはおよそ6mm程度の大きさの文字なのですが、ディスプレイにおいては、こういった絶対値は扱いづらいので、注意してください。なお、日本語の場合はそれぞれ太字でなければ22ポイント、太字であれば18ポイントが基準とされています(G18) 大きな文字であれば、コントラスト比は3:1でもよいということになっています。
 
   1-4-4:
     1-4-4a:
@@ -1008,10 +1008,10 @@ checks:
           - 2-2-2b
       name: 制限時間のあるコンテンツが存在するが、達成基準2.2.1で求められている配慮をしている
       tech: |
-        コンテンツに制限時間を設ける必要がある場合、達成基準2.2.1で求められている次の配慮が必要。制限時間が充分に長い（20時間）か、制限時間を解除できるか、10倍以上の制限時間に調整できるか、延長できるか、その制限時間がコンテンツにとって必然的（オークション）なものでなければならない。
+        コンテンツに制限時間を設ける必要がある場合、達成基準2.2.1で求められている次の配慮が必要。制限時間が充分に長い（20時間）か、制限時間を解除できるか、10倍以上の制限時間に調整できるか、延長できるか、その制限時間がコンテンツにとって必然的（オークションなど）なものでなければならない。
         「制限時間」というのは、操作だけを対象としない。カルーセルがある場合、カルーセルが自動的に切り替わっていく間に内容を読まなければならないとき、これは制限時間である。
         また動画や音声がある場合も要注意である。これらも制限時間を設けることで認識することが難しくなる利用者が存在する。
-        動画、音声、カルーセルなどは、制限時間を延長や調整という措置は考えづらいが、一時停止と再開ができれば、本達成基準を満たすことになる（http://waic.jp/docs/WCAG-TECHS/G4.html）。なお、カルーセルに関しては、2-2-2で類似達成項目があり、利用者が停止できなければ、レベルAが取得できないので、注意すること。
+        動画、音声、カルーセルなどは、制限時間を延長や調整という措置は考えづらいが、一時停止と再開ができれば、本達成基準を満たすことになる（http://waic.jp/docs/WCAG-TECHS/G4.html）。なお、カルーセルに関しては、2.2.2で類似達成項目があり、利用者が停止できなければ、レベルAが取得できないので、注意すること。
 
     2-2-1c:
       criterion: *c2-2-1
@@ -1085,7 +1085,7 @@ checks:
       level: *lv3
       name: 制限時間のあるコンテンツが存在するが、コンテンツ利用について、必要不可欠なものではない
       tech: |
-        たとえばとあるページのお知らせ一覧は、3分ごとに最新の状態に自動更新される（制限時間のあるコンテンツ）が、そのページ以外に、自動更新されずに、すべてのお知らせ記事にアクセスできる仕組みを設けていれば、制限時間のあるコンテンツは必要不可欠でなくなる。
+        たとえばとあるページのお知らせ一覧は、3分ごとに最新の状態に自動更新される（制限時間のあるコンテンツ）が、そのページ以外に、自動更新されずにすべてのお知らせ記事にアクセスできる仕組みを設けていれば、制限時間のあるコンテンツは「コンテンツ利用について、必要不可欠」でなくなる。
 
     2-2-3c:
       criterion: *c2-2-3
@@ -1113,7 +1113,7 @@ checks:
           - 1-4-7b
       name: 制限時間のあるコンテンツが存在するが、普通の動画や音声であり、配慮がなされている
       tech: |
-        動画や音声は本質的に「制限時間のあるコンテンツ」だが、1-1「非テキストコンテンツ」で定められている対応をしていれば、制限時間についての問題にも対応できる。
+        動画や音声は本質的に「制限時間のあるコンテンツ」だが、1.1「非テキストコンテンツ」で定められている対応をしていれば、制限時間についての問題にも対応できる。
 
     2-2-3d:
       criterion: *c2-2-3
@@ -1129,7 +1129,7 @@ checks:
           - 2-2-1c
       name: 制限時間のあるコンテンツが存在するが、ライブ映像、またはオークション等のリアルタイムのイベントである
       tech: |
-        ライブの音声と動画については、1-1の対応を行うこと。リアルタイムのイベントについては、2-2-1cと同じ理由です。
+        ライブの音声と動画については、1.1の対応を行うこと。リアルタイムのイベントについては、2.2.1cと同じ理由です。
 
   2-2-4:
     2-2-4a:
@@ -1167,7 +1167,7 @@ checks:
           - 2-2-4b
       name: 割り込む実装があるが、あらかじめ抑止できる
       tech: |
-        サイトの利用者設定などで、割込み処理に関する振る舞いを調整できるようにする。2-2-4bのような緊急性のあるアラート以外を非表示にする、など。
+        サイトの利用者設定などで、割込み処理に関する振る舞いを調整できるようにする。2.2.4bのような緊急性のあるアラート以外を非表示にする、など。
 
   2-2-5:
     2-2-5a:
@@ -1231,7 +1231,7 @@ checks:
         - 2-3-2
       name: 閃光を放つコンテンツは存在しない
       tech: |
-        2.3.1と同様ですが、例外を認めません。2-3-1aを満たしていたら適合となると考えるかもしれませんが、こちらの判定は厳しく、1ピクセルの大きさでもダメなので注意してください。
+        2.3.1と同様ですが、例外を認めません。2.3.1aを満たしていたら適合となると考えるかもしれませんが、こちらの判定は厳しく、1ピクセルの大きさでもダメなので注意してください。
 
   2-4-1:
     2-4-1a:
@@ -1280,7 +1280,7 @@ checks:
       tech: |
         リンク文字列は、そのリンク先がなんであるかを明示するべきである。スクリーンリーダの利用者はタブキー押下だけでリンクのみを辿って文章を読んでいくことが多いが、こういう場合に、それぞれのリンク文字列が固有でなく「続きを読む」や「詳しくはこちら」となっていると、リンク先がなんなのかを把握しづらくなる。
         ただ2.4.4では、文脈に頼ったリンク文字列の提供はよしとされている。たとえば書籍の内容がHTML、PDF、MP3で提供されている時に、最初のHTMLだけは書籍のタイトルをリンク文字列に含めているが、以降は「PDF」「MP3」と読み上げることが良しとされている。
-        また、*同じ段落内であれば*、いわゆる「こちらリンク」さえも許されるらしい（G53）が、「こちらリンク」については、そもそもあまり用いないほうが良いでしょう。
+        また、<strong>同じ段落内であれば</strong>、いわゆる「こちらリンク」さえも許されるらしい（G53）が、「こちらリンク」については、そもそもあまり用いないほうが良いでしょう。
 
   2-4-5:
     2-4-5a:
@@ -1291,9 +1291,9 @@ checks:
       level: *lv2
       name: グローバルメニューに加えて、サイトマップ（＋目次ページ）、サイト内検索、関連ページへのリンクなど、ここのページへの到達手段を複数用意している
       tech: |
-        一連のプロセスであるショッピングカートの途中のページなどを除いて、ウェブページ一式内のそれぞれのページにたどり着く複数の手段を提供することが望ましい。多くのウェブサイトは、グローバルメニューを備えているが、それに加えて、サイト内検索や、関連ページへのリンク、サイトマップ、目次（ページ）の何れかがあれば、この達成基準を満たせる（ただし「目次ページ」のあり方については、その目次ページがここのページにたどり着く唯一の手段である場合、注意を要するかもしれない）。
+        一連のプロセスであるショッピングカートの途中のページなどを除いて、ウェブページ一式内のそれぞれのページにたどり着く複数の手段を提供することが望ましい。多くのウェブサイトは、グローバルメニューを備えているが、それに加えて、サイト内検索や、関連ページへのリンク、サイトマップ、目次（ページ）の何れかがあれば、この達成基準を満たせる（ただし「目次ページ」のあり方については、その目次ページが個々のページにたどり着く唯一の手段である場合、注意を要するかもしれない）。
         目次ページというのは、いわばカテゴリにぶらさがる個々の項目へのリンク一覧である。サイトマップが完全（すべてのページを網羅している）なものでなくても、サイトマップに目次ページを含んでいれば、「複数の手段」を提供したと言える。
-        ただし、目次ページより下位のページが、何度もクリックしないとたどり着けないページになっていたら、やはりサイト内検索の実装のぞましいだろう。またそういったコンテンツが存在してしまう前に、そもそもサイトの構造をシンプルにすべきでもあります。
+        ただし、目次ページより下位のページが、何度もクリックしないとたどり着けないページになっていたら、やはりサイト内検索の実装がのぞましいだろう。またそういったコンテンツが存在してしまう前に、そもそもサイトの構造をシンプルにすべきでもあります。
 
   2-4-6:
     2-4-6a:
@@ -1341,7 +1341,7 @@ checks:
           - 2-4-4a
       name: リンク文字列は、一部の例外を除いて単独で理解可能である
       tech: |
-        リンク文字列単独で、リンクの目的を理解できるようにしなければならない。2.4.4と異なるのは文脈依存を許さない点です。2-4-4の「書籍」の例を再掲すると、HTML版、PDF版、MP3版はそれぞれ書籍名をリンク文字列内に持っている必要があります。ただし、「ほとんどの利用者にとってリンクの目的が曖昧（http://waic.jp/docs/WCAG20/Overview.html#ambiguouslinkdef）」な場合は、この限りではないらしいが、「グァバ」の例は、障害のない利用者にも使いづらいように考えられます。ドアの例（2.4.4）の方が、理解しやすいかもしれません。
+        リンク文字列単独で、リンクの目的を理解できるようにしなければならない。2.4.4と異なるのは文脈依存を許さない点です。2.4.4の「書籍」の例を再掲すると、HTML版、PDF版、MP3版はそれぞれ書籍名をリンク文字列内に持っている必要があります。ただし、「ほとんどの利用者にとってリンクの目的が曖昧（http://waic.jp/docs/WCAG20/Overview.html#ambiguouslinkdef）」な場合は、この限りではないらしいが、「グァバ」の例は、障害のない利用者にも使いづらいように考えられます。ドアの例（2.4.4）の方が、理解しやすいかもしれません。
 
   2-4-10:
     2-4-10a:
@@ -1359,7 +1359,7 @@ checks:
           - 2-4-6a
       name: 見出しによる構造化を徹底している
       tech: |
-        ウェブページは見出しを用いて構造化されていることが望ましい。この達成基準はAAAであるのは、すこし奇異に見えるかもしれないが、原稿が構造化されていない場合など、コンテンツ製作者が恣意的に見出しを用いて構造化することができないような場合もあるからである（事例についてはUnderstanding（http://waic.jp/docs/UNDERSTANDING-WCAG20/navigation-mechanisms-headings.html）を参照）。
+        ウェブページは見出しを用いて構造化されていることが望ましい。この達成基準がAAAであるのは、すこし奇異に見えるかもしれないが、原稿が構造化されていない場合など、コンテンツ製作者が恣意的に見出しを用いて構造化することができないような場合もあるからである（事例についてはUnderstanding（http://waic.jp/docs/UNDERSTANDING-WCAG20/navigation-mechanisms-headings.html）を参照）。
 
   3-1-1:
     3-1-1a:
@@ -1482,7 +1482,7 @@ checks:
       name: 人名や地名、固有名詞。あるいは読み方がわからないと文章の意味が不明瞭になる場合に、rubyやかっこ書きで読み方がわかるようになっている。あるいは読み方の音声ファイルが提供されている。
       tech: |
         日本語の例でいえば端的なものは人名や漢字の読み方がこれに当たるだろう。rubyを付与したり、かっこで注釈を加えることが望ましい。漢字の場合はそれで良いが、外国語の読み方などについて、手厚い対応としては、発音の音声ファイルを用意する対応も考えられる。
-        日本語に特化した話が続くが、どの程度の漢字に読み仮名を振るかについては、3.1.5を準用して、前期中等教育レベル、というのがひとつの判断になると考えられるが、人名などはこの限りではないし、じっさいのところ、中学校三年生レベルの漢字はそれなりに難しいこともある。
+        日本語に特化した話が続くが、どの程度の漢字に読み仮名を振るかについては、3.1.5を準用して、前期中等教育レベル、というのがひとつの判断になると考えられるが、人名などはこの限りではないし、じっさいのところ、中学校3年生レベルの漢字はそれなりに難しいこともある。
         Understandingでは、文脈に依存した読み方（典型的な例は「方」を「かた」あるいは「ほう」と読む場合）について、言及がある。個別事例になるが、「方」に関しては、スクリーンリーダはそれほど賢く判別はしてくれないが、しかしそれで意味がわからなくなるというほど致命的でもないため、問題は少ないと言える。
         いっぽう、これを「発音」の文脈に入れるべきではないかもしれないが、日付をスラッシュで区切った場合は、分数に読まれることがあり、スクリーンリーダでのユーザビリティを高めるためには避けるべきだと思われる。
 
@@ -1495,7 +1495,7 @@ checks:
       level: *lv1
       name: フォーカスを受け取っただけで状況を変化するような要素は存在しない
       tech: |
-        フォーカスを受け取っただけで状況を変化するような要素は存在しない。フォーカスを受け取っただけで、なんらかの状況の変化を起こしてはいけない。フォーカスを受け取ったら、自動的に開くモーダルウィンドウや、フォーカスを受け取ったらページ移動が起こる、というのがこういった不具合の例。こういった振る舞いは、利用者にとって予測が難しく、扱いづらい。
+        フォーカスを受け取っただけで、なんらかの状況の変化を起こしてはいけない。フォーカスを受け取ったら、自動的に開くモーダルウィンドウや、フォーカスを受け取ったらページ移動が起こる、というのが不具合の例。こういった振る舞いは、利用者にとって予測が難しく、扱いづらい。
 
   3-2-2:
     3-2-2a:
@@ -1511,7 +1511,7 @@ checks:
           - 3-2-1a
       name: 入力時に予告なしに状況を変化させるような要素は存在しない。
       tech: |
-        ページ内の入力欄全てを入力したら自動的に送信する、とか、チェックボックス（ラジオボタン）をチェックしたら、ページ移動するとか、そういったことをしてはならない。
+        ページ内の入力欄全てを入力したら自動的に送信するとか、チェックボックスやラジオボタンをチェックしたらページ移動するとか、そういったことをしてはならない。
         時々あるのは、selectのonchangeを拾ってページ移動するようなインタフェイス。マウスで操作している利用者にとっては、selectの3項目下を選択するというようなことができるが、キーボードの場合は、下キーを押した途端にonchange判定されてしまって、永遠に2個下に行けない、ということが起こる（ある意味「キーボードトラップ」になっているとも言えるだろう）。こういった場合は、「実行ボタン」を付与する必要があるだろう。
         この達成基準は3.2.1と似ているが、状況の変化が予測可能で、制御可能であれば、許されることもあるという点で違う（フォーカスの場合は、予測や制御が本質的に難しい）。たとえばカレンダに予定を追加するフォームがある時、予定の種別をラジオボタンで選択すると、入力欄が動的に変化するような仕掛けは、予測可能で制御可能であると言えるだろう。
         また、クレジットカード番号など4桁ずつ入力する際、4文字入力したら次のフィールドに自動的にフォーカスを映すような挙動も、あらかじめ説明されている場合は許容される。
@@ -1539,7 +1539,7 @@ checks:
       name: ウェブページ一式の中で、同じ機能を提供するラベルは一貫している。
       tech: |
         同じ機能を提供するリンクやボタンなどはウェブページ一式の中で一貫している必要がある。この達成基準は結構見落としやすい。なぜならば、ほとんど自明と思えるようなラベルであっても、厳密に一貫していない場合は、この達成基準を満たせないからである。
-        不適合事例で上がっている例が、「検索」ボタンと「探す」ボタンが、同様の機能を提供している場合、ラベルが異なっているためにNGとなる。
+        不適合事例で上がっている例が、「検索」ボタンと「探す」ボタンが同様の機能を提供している場合。これはラベルが異なっているためにNGとなる。
 
   3-2-5:
     3-2-5a:
@@ -1606,7 +1606,7 @@ checks:
       level: *lv1
       name: 必須項目や形式の指定のあるフォームが存在するが、テキストでエラーを説明している
       tech: |
-        フォームに必須項目や所定の形式の値の入力を求める項目があり、ただしく入力されない限り送信を受け付けない場合は、利用者にわかりやすくエラーを表示すること。エラーを表示する際、たとえば入力されていない必須項目の背景色を変える*だけ*では、視覚障害者にとってエラーがわからないので、不十分である（これは色を変えてはいけない、ということは意味しない。色を明示することで晴眼者のユーザビリティは向上する）。文章でエラーを説明する必要がある。
+        フォームに必須項目や所定の形式の値の入力を求める項目があり、ただしく入力されない限り送信を受け付けない場合は、利用者にわかりやすくエラーを表示すること。エラーを表示する際、たとえば入力されていない必須項目の背景色を変える<strong>だけ</strong>では、視覚障害者にとってエラーがわからないので、不十分である（これは色を変えてはいけない、ということは意味しない。色を明示することで晴眼者のユーザビリティは向上する）。文章でエラーを説明する必要がある。
         JavaScriptで、送信前にエラーチェックをしてしまうのもよい。
 
   3-3-2:
