checks.ymlのチェック

--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -69,7 +69,8 @@ checks:
         - 1-4-9
       level: *lv1
       name: 画像、動画、音声、ASCIIアートが存在しない
-
+      tech: |
+        関連する項目が「適用なし適合」になります。
     1-1-1b:
       criterion: *c1-1-1
       pass:
@@ -142,6 +143,8 @@ checks:
         - 1-2-9
       level: *lv1
       name: 時間の経過に伴って変化する画像（カルーセル、アニメーションGIF等）、動画、音声は存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります。
 
     1-1-1f:
       criterion: *c1-1-1
@@ -167,6 +170,8 @@ checks:
           - 1-1-1h
       level: *lv1
       name: <abbr title="Completely Automated Public Turing test to tell Computers and Humans Apart (コンピュータと人間を区別する完全に自動化された公開チューリングテスト)">CAPTCHA</abbr>が存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります。
 
     1-1-1h:
       criterion: *c1-1-1
@@ -189,6 +194,8 @@ checks:
           - 1-1-1j
       level: *lv1
       name: 試験、演習目的の画像、動画、音声は存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります。
 
     1-1-1j:
       criterion: *c1-1-1
@@ -213,6 +220,8 @@ checks:
           - 1-1-1l
       level: *lv1
       name: 特定の感覚を呼び起こす目的の画像、動画、音声は存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります。
 
     1-1-1l:
       criterion: *c1-1-1
@@ -254,6 +263,8 @@ checks:
         - 1-2-9
       level: *lv1
       name: 音声も映像も存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります。
 
     1-2-1b:
       criterion: *c1-2-1
@@ -301,7 +312,7 @@ checks:
       pass:
         1-2-1:
           - 1-2-1a
-          - 1-2-1c
+          - 1-2-1d
       level: *lv1
       name: 音声のない映像（GIFアニメーションなど）が存在するが、同等の情報をテキストで提供している
       tech: |
@@ -334,6 +345,8 @@ checks:
         - 1-2-2
       level: *lv1
       name: 同期したメディアが存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります。
 
     1-2-2b:
       criterion: *c1-2-2
@@ -377,6 +390,8 @@ checks:
       non-exist:
         - 1-2-4
       name: ライブ動画が存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります。
 
     1-2-4b:
       criterion: *c1-2-4
@@ -482,6 +497,8 @@ checks:
           - 1-3-1b
           - 1-3-1c
       name: tableが存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります。
 
     1-3-1c:
       criterion: *c1-3-1
@@ -502,12 +519,15 @@ checks:
           - 1-3-1d
           - 1-3-1e
       name: formが存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります。
 
     1-3-1e:
       criterion: *c1-3-1
       level: *lv1
       pass:
         1-3-1:
+          - 1-3-1d
           - 1-3-1e
       name: formの各要素はlabelを用いて適切にマークアップしている
       tech: |
@@ -997,6 +1017,8 @@ checks:
       non-exist:
         - 2-2-1
       name: 制限時間のあるコンテンツ（ページの表示期限、入力の制限時間やカルーセルなど）は存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります。
 
     2-2-1b:
       criterion: *c2-2-1
@@ -1014,7 +1036,7 @@ checks:
         コンテンツに制限時間を設ける必要がある場合、達成基準2.2.1で求められている次の配慮が必要。制限時間が充分に長い（20時間）か、制限時間を解除できるか、10倍以上の制限時間に調整できるか、延長できるか、その制限時間がコンテンツにとって必然的（オークションなど）なものでなければならない。
         「制限時間」というのは、操作だけを対象としない。カルーセルがある場合、カルーセルが自動的に切り替わっていく間に内容を読まなければならないとき、これは制限時間である。
         また動画や音声がある場合も要注意である。これらも制限時間を設けることで認識することが難しくなる利用者が存在する。
-        動画、音声、カルーセルなどは、制限時間を延長や調整という措置は考えづらいが、一時停止と再開ができれば、本達成基準を満たすことになる（http://waic.jp/docs/WCAG-TECHS/G4.html）。なお、カルーセルに関しては、2.2.2で類似達成項目があり、利用者が停止できなければ、レベルAが取得できないので、注意すること。
+        動画、音声、カルーセルなどは、制限時間を延長や調整という措置は考えづらいが、一時停止と再開ができれば、本達成基準を満たすことになる（<a href="http://waic.jp/docs/WCAG-TECHS/G4.html" target="a11y_target_out">http://waic.jp/docs/WCAG-TECHS/G4.html</a>）。なお、カルーセルに関しては、2.2.2で類似達成項目があり、利用者が停止できなければ、レベルAが取得できないので、注意すること。
 
     2-2-1c:
       criterion: *c2-2-1
@@ -1045,6 +1067,8 @@ checks:
       non-exist:
         - 2-2-2
       name: 動き（カルーセルなど）、点滅、自動更新のあるコンテンツは存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります。
 
     2-2-2b:
       criterion: *c2-2-2
@@ -1059,7 +1083,7 @@ checks:
           - 2-3-1a
       name: 動き、点滅、自動更新のあるコンテンツが存在するが、達成基準2.2.2で求められている配慮をしている
       tech: |
-        動きのある、点滅している、スクロールする、又は自動更新する情報は、その情報に注意を逸らされてしまわないように、一時停止、停止、非表示することができる必要がある。読字障害、知的障害、注意力欠如障害のある利用者は、こういったコンテンツのために、他のコンテンツを利用できなくなる恐れがあるため、本項目は「非干渉」である。「他のコンテンツ」については、http://waic.jp/docs/UNDERSTANDING-WCAG20/time-limits-pause.htmlの「全面広告」に示唆のある事例が上がっているのでみると良い。
+        動きのある、点滅している、スクロールする、又は自動更新する情報は、その情報に注意を逸らされてしまわないように、一時停止、停止、非表示することができる必要がある。読字障害、知的障害、注意力欠如障害のある利用者は、こういったコンテンツのために、他のコンテンツを利用できなくなる恐れがあるため、本項目は「非干渉」である。「他のコンテンツ」については、<a href="http://waic.jp/docs/UNDERSTANDING-WCAG20/time-limits-pause.html" target="a11y_target_out">http://waic.jp/docs/UNDERSTANDING-WCAG20/time-limits-pause.html</a>の「全面広告」に示唆のある事例が上がっているのでみると良い。
         動画、音声、カルーセル等は、動きのあるコンテンツである。
         動き、点滅のあるコンテンツが5秒以内の場合は、この達成基準を満たすことになるが、「点滅」は、ときとして「閃光」と同じ弊害をもたらすことがあり、5秒以内であっても、「閃光」的な点滅は許されない。
 
@@ -1076,6 +1100,8 @@ checks:
       non-exist:
         - 2-2-3
       name: 制限時間のあるコンテンツ（ページの表示期限、入力の制限時間やカルーセルなど）は存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります。
 
     2-2-3b:
       criterion: *c2-2-3
@@ -1207,6 +1233,8 @@ checks:
       non-exist:
         - 2-3-1
       name: 閃光を放つコンテンツは存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります。
 
     2-3-1b:
       criterion: *c2-3-1
@@ -1218,7 +1246,7 @@ checks:
       non-interference: true
       name: 閃光を放つコンテンツが存在するが、一般閃光閾値及び赤色閃光閾値を下回っている
       tech: |
-        光過敏症の利用者は、閃光によって発作を引き起こされることがあり、その他のコンテンツをまったく利用できなくなるおそれがあるため、これを禁じています。画面ももちろん、動画のなかでも注意をする必要があるので、動画を再生して確認してください。閃光の詳しい定義については、http://waic.jp/docs/UNDERSTANDING-WCAG20/seizure-does-not-violate.htmlを参照。「点滅」についても注意。
+        光過敏症の利用者は、閃光によって発作を引き起こされることがあり、その他のコンテンツをまったく利用できなくなるおそれがあるため、これを禁じています。画面ももちろん、動画のなかでも注意をする必要があるので、動画を再生して確認してください。閃光の詳しい定義については、<a href="http://waic.jp/docs/UNDERSTANDING-WCAG20/seizure-does-not-violate.html" target="a11y_target_out">http://waic.jp/docs/UNDERSTANDING-WCAG20/seizure-does-not-violate.html</a>を参照。「点滅」についても注意。
 
   2-3-2:
     2-3-2a:
@@ -1232,7 +1260,7 @@ checks:
           - 2-3-1a
       non-exist:
         - 2-3-2
-      name: 閃光を放つコンテンツは存在しない
+      name: 明るさや大きさに関係なく閃光を放つコンテンツは存在しない。
       tech: |
         2.3.1と同様ですが、例外を認めません。2.3.1aを満たしていたら適合となると考えるかもしれませんが、こちらの判定は厳しく、1ピクセルの大きさでもダメなので注意してください。
 
@@ -1246,7 +1274,7 @@ checks:
       name: ブロックスキップが提供されている
       tech: |
         すべてのページで共通の部分は、これをスキップできる実装をすること。共通の部分の例は、グローバルメニューや広告の領域などが挙げられる。スクリーンリーダ利用者や極端に文字サイズを拡大している利用者にとっては、こういった共通の部分をなんども読み上げたり、スクロールによって通り過ぎたりするのが、困難である。
-        なお注意すべきはアクセシビリティ・サポーテッドである。達成基準によれば「見出しによる構造化（H69）」か「ブロックスキップ用のリンクを置く（G001）」（カッコ内はUnderstandingの番号）の何れかを満たせば良いとなっているが、http://waic.jp/docs/as/info/201406/index.html では、「見出しによる構造化」によるブロックスキップはビジュアルブラウザで使えないことが多いので、アクセシビリティ・サポーテッドでないとなっている。ので、G001対応は、現状では2.4.1を満たすために必須である。
+        なお注意すべきはアクセシビリティ・サポーテッドである。達成基準によれば「見出しによる構造化（H69）」か「ブロックスキップ用のリンクを置く（G001）」（カッコ内はUnderstandingの番号）の何れかを満たせば良いとなっているが、<a href="http://waic.jp/docs/as/info/201406/index.html" target="a11y_target_out">http://waic.jp/docs/as/info/201406/index.html</a> では、「見出しによる構造化」によるブロックスキップはビジュアルブラウザで使えないことが多いので、アクセシビリティ・サポーテッドでないとなっている。ので、G001対応は、現状では2.4.1を満たすために必須である。
         ブロックスキップ用のリンクは、なにもグローバルメニューや広告領域だけでなく、たとえばたくさんのリンクを延々と読み上げ続けるFacebookのplugin-boxなんかも、その対象とすると、便利が良いだろう。
 
   2-4-2:
@@ -1344,7 +1372,7 @@ checks:
           - 2-4-4a
       name: リンク文字列は、一部の例外を除いて単独で理解可能である
       tech: |
-        リンク文字列単独で、リンクの目的を理解できるようにしなければならない。2.4.4と異なるのは文脈依存を許さない点です。2.4.4の「書籍」の例を再掲すると、HTML版、PDF版、MP3版はそれぞれ書籍名をリンク文字列内に持っている必要があります。ただし、「ほとんどの利用者にとってリンクの目的が曖昧（http://waic.jp/docs/WCAG20/Overview.html#ambiguouslinkdef）」な場合は、この限りではないらしいが、「グァバ」の例は、障害のない利用者にも使いづらいように考えられます。ドアの例（2.4.4）の方が、理解しやすいかもしれません。
+        リンク文字列単独で、リンクの目的を理解できるようにしなければならない。2.4.4と異なるのは文脈依存を許さない点です。2.4.4の「書籍」の例を再掲すると、HTML版、PDF版、MP3版はそれぞれ書籍名をリンク文字列内に持っている必要があります。ただし、「ほとんどの利用者にとってリンクの目的が曖昧（<a href="http://waic.jp/docs/WCAG20/Overview.html#ambiguouslinkdef" target="a11y_target_out">http://waic.jp/docs/WCAG20/Overview.html#ambiguouslinkdef</a>）」な場合は、この限りではないらしいが、「グァバ」の例は、障害のない利用者にも使いづらいように考えられます。ドアの例（2.4.4）の方が、理解しやすいかもしれません。
 
   2-4-10:
     2-4-10a:
@@ -1362,7 +1390,7 @@ checks:
           - 2-4-6a
       name: 見出しによる構造化を徹底している
       tech: |
-        ウェブページは見出しを用いて構造化されていることが望ましい。この達成基準がAAAであるのは、すこし奇異に見えるかもしれないが、原稿が構造化されていない場合など、コンテンツ製作者が恣意的に見出しを用いて構造化することができないような場合もあるからである（事例についてはUnderstanding（http://waic.jp/docs/UNDERSTANDING-WCAG20/navigation-mechanisms-headings.html）を参照）。
+        ウェブページは見出しを用いて構造化されていることが望ましい。この達成基準がAAAであるのは、すこし奇異に見えるかもしれないが、原稿が構造化されていない場合など、コンテンツ製作者が恣意的に見出しを用いて構造化することができないような場合もあるからである（事例についてはUnderstanding（<a href="http://waic.jp/docs/UNDERSTANDING-WCAG20/navigation-mechanisms-headings.html" target="a11y_target_out">http://waic.jp/docs/UNDERSTANDING-WCAG20/navigation-mechanisms-headings.html</a>）を参照）。
 
   3-1-1:
     3-1-1a:
@@ -1411,6 +1439,8 @@ checks:
       non-exist:
         - 3-1-3
       name: 難しい用語、技術語、言語特有の慣用句が存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります。
 
     3-1-3b:
       criterion: *c3-1-3
@@ -1442,6 +1472,8 @@ checks:
       non-exist:
         - 3-1-4
       name: 略語が存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります。
 
     3-1-4b:
       criterion: *c3-1-4
@@ -1470,7 +1502,7 @@ checks:
       name: コンテンツは中学校三年生程度の読解力で理解できるか、あるいは理解できる注釈かバージョンが存在する
       tech: |
         コンテンツが前期中等教育レベル（UNESCO基準、9年間の教育を受けたもの、なので、中学校3年生程度）の読解力で読めることが望ましい。それを超える読解レベルを求めるときには、前期中等教育レベルの読解力で理解できる補足的コンテンツまたはバージョンを用意すること。
-        なお、どうやって前期中等教育レベルかどうかを判定するかであるが、Understandingによれば、だいたいどの国にも判定計算式があるからそれを利用したらいいとなっている。しかし、日本語には、そのものズバリのものは今の所ない様子（インターネット上に研究の残滓は散見される）。面白い試みとしては、日本語文章難易度判別システム（http://jreadability.net）があった。おそらくここで示されている「中級前半」程度であれば、ほどよろしいかとおもわれるが、これは利用規約によれば「教育・研究目的のみ」で許容されているようなので、商用利用は望めないだろう。
+        なお、どうやって前期中等教育レベルかどうかを判定するかであるが、Understandingによれば、だいたいどの国にも判定計算式があるからそれを利用したらいいとなっている。しかし、日本語には、そのものズバリのものは今の所ない様子（インターネット上に研究の残滓は散見される）。面白い試みとしては、日本語文章難易度判別システム（<a href="http://jreadability.net" target="a11y_target_out">http://jreadability.net</a>）があった。おそらくここで示されている「中級前半」程度であれば、ほどよろしいかとおもわれるが、これは利用規約によれば「教育・研究目的のみ」で許容されているようなので、商用利用は望めないだろう。
 
   3-1-6:
     3-1-6a:
@@ -1588,6 +1620,8 @@ checks:
       non-exist:
         - 3-3-1
       name: フォーム（サイト内検索なども含む）は存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります
 
     3-3-1b:
       criterion: *c3-3-1
@@ -1598,6 +1632,8 @@ checks:
           - 3-3-1c
       level: *lv1
       name: 必須項目や形式の指定のあるフォームは存在しない
+      tech: |
+        関連する項目が「適用なし適合」になります
 
     3-3-1c:
       criterion: *c3-3-1
@@ -1616,6 +1652,8 @@ checks:
     3-3-2a:
       criterion: *c3-3-2
       pass:
+        3-3-1:
+          - 3-3-1a
         3-3-2:
           - 3-3-2a
       level: *lv1
@@ -1711,6 +1749,8 @@ checks:
       non-exist:
         - 3-3-6
       name: フォームが存在しない。あるいは検索フォームのように、情報を送信する目的でないフォームのみ存在する
+      tech: |
+        関連する項目が「適用なし適合」になります
 
     3-3-6b:
       criterion: *c3-3-6
