--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -71,6 +71,7 @@ checks:
       name: 画像、動画、音声、ASCIIアートが存在しない
       tech: |
         関連する項目が「適用なし適合」になります。
+
     1-1-1b:
       criterion: *c1-1-1
       pass:
@@ -170,8 +171,6 @@ checks:
           - 1-1-1h
       level: *lv1
       name: <abbr title="Completely Automated Public Turing test to tell Computers and Humans Apart (コンピュータと人間を区別する完全に自動化された公開チューリングテスト)">CAPTCHA</abbr>が存在しない
-      tech: |
-        関連する項目が「適用なし適合」になります。
 
     1-1-1h:
       criterion: *c1-1-1
@@ -194,8 +193,6 @@ checks:
           - 1-1-1j
       level: *lv1
       name: 試験、演習目的の画像、動画、音声は存在しない
-      tech: |
-        関連する項目が「適用なし適合」になります。
 
     1-1-1j:
       criterion: *c1-1-1
@@ -220,8 +217,6 @@ checks:
           - 1-1-1l
       level: *lv1
       name: 特定の感覚を呼び起こす目的の画像、動画、音声は存在しない
-      tech: |
-        関連する項目が「適用なし適合」になります。
 
     1-1-1l:
       criterion: *c1-1-1
@@ -310,6 +305,8 @@ checks:
     1-2-1d:
       criterion: *c1-2-1
       pass:
+        1-1-1:
+          - 1-1-1a
         1-2-1:
           - 1-2-1a
           - 1-2-1d
@@ -363,6 +360,8 @@ checks:
     1-2-3a:
       criterion: *c1-2-3
       pass:
+        1-1-1:
+          - 1-1-1a
         1-2-2:
           - 1-2-2a
         1-2-3:
@@ -396,7 +395,10 @@ checks:
     1-2-4b:
       criterion: *c1-2-4
       pass:
+        1-1-1:
+          - 1-1-1a
         1-2-4:
+          - 1-2-4a
           - 1-2-4b
       relations:
         1-2-4:
@@ -410,6 +412,8 @@ checks:
     1-2-5a:
       criterion: *c1-2-5
       pass:
+        1-1-1:
+          - 1-1-1a
         1-2-5:
           - 1-2-5a
       level: *lv2
@@ -424,6 +428,8 @@ checks:
     1-2-6a:
       criterion: *c1-2-6
       pass:
+        1-1-1:
+          - 1-1-1a
         1-2-6:
           - 1-2-6a
       level: *lv3
@@ -435,6 +441,8 @@ checks:
     1-2-7a:
       criterion: *c1-2-7
       pass:
+        1-1-1:
+          - 1-1-1a
         1-2-7:
           - 1-2-7a
       level: *lv3
@@ -449,6 +457,8 @@ checks:
     1-2-8a:
       criterion: *c1-2-8
       pass:
+        1-1-1:
+          - 1-1-1a
         1-2-8:
           - 1-2-8a
       level: *lv3
@@ -461,6 +471,8 @@ checks:
     1-2-9a:
       criterion: *c1-2-9
       pass:
+        1-1-1:
+          - 1-1-1a
         1-2-9:
           - 1-2-9a
       level: *lv3
@@ -497,8 +509,6 @@ checks:
           - 1-3-1b
           - 1-3-1c
       name: tableが存在しない
-      tech: |
-        関連する項目が「適用なし適合」になります。
 
     1-3-1c:
       criterion: *c1-3-1
@@ -519,8 +529,6 @@ checks:
           - 1-3-1d
           - 1-3-1e
       name: formが存在しない
-      tech: |
-        関連する項目が「適用なし適合」になります。
 
     1-3-1e:
       criterion: *c1-3-1
@@ -611,7 +619,7 @@ checks:
       name: 自動再生の音声があるが、3秒以下である。あるいは適切な制御ができる。
       tech: |
         ウェブページ上にある音声が自動的に再生され、3秒より長く続く場合、その音声を一時停止又は停止するメカニズム、もしくはシステム全体の音量レベルに影響を与えずに音量レベルを調整できるメカニズムが利用できる。
-        余談だが、YouTubeは自動再生である。であるが、視覚障害者にとっては、自動再生がありがたい（＝リンクを踏むだけで、情報を得る流れを得られる。しかもYouTubeとはそういうものだ、という了解もある）という側面もあり、この自動再生の利便性は、もしかするとYouTube以外でもありえることかもしれない。
+        余談だが、YouTubeは自動再生である。であるが、視覚障害者にとっては、自動再生がありがたい（＝リンクを踏むだけで、情報を得る流れを得られる。しかもYouTubeとはそういうものだ、という了解もある）という側面もある。この自動再生の利便性は、もしかするとYouTube以外でもありえることかもしれない。
 
   1-4-3:
     1-4-3a:
