--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -70,7 +70,7 @@ checks:
       level: *lv1
       name: 画像、動画、音声、ASCIIアートが存在しない
       tech: |
-        関連する項目が「適用なし適合」になります。
+        関連する達成基準が「適用なし適合」になります。
 
     1-1-1b:
       criterion: *c1-1-1
@@ -145,7 +145,7 @@ checks:
       level: *lv1
       name: 時間の経過に伴って変化する画像（カルーセル、アニメーションGIF等）、動画、音声は存在しない
       tech: |
-        関連する項目が「適用なし適合」になります。
+        関連する達成基準が「適用なし適合」になります。
 
     1-1-1f:
       criterion: *c1-1-1
@@ -259,7 +259,7 @@ checks:
       level: *lv1
       name: 音声も映像も存在しない
       tech: |
-        関連する項目が「適用なし適合」になります。
+        関連する達成基準が「適用なし適合」になります。
 
     1-2-1b:
       criterion: *c1-2-1
@@ -343,7 +343,7 @@ checks:
       level: *lv1
       name: 同期したメディアが存在しない
       tech: |
-        関連する項目が「適用なし適合」になります。
+        関連する達成基準が「適用なし適合」になります。
 
     1-2-2b:
       criterion: *c1-2-2
@@ -390,7 +390,7 @@ checks:
         - 1-2-4
       name: ライブ動画が存在しない
       tech: |
-        関連する項目が「適用なし適合」になります。
+        関連する達成基準が「適用なし適合」になります。
 
     1-2-4b:
       criterion: *c1-2-4
@@ -611,6 +611,8 @@ checks:
     1-4-2b:
       criterion: *c1-4-2
       pass:
+        1-1-1:
+          - 1-1-1a
         1-4-2:
           - 1-4-2a
           - 1-4-2b
@@ -1026,7 +1028,7 @@ checks:
         - 2-2-1
       name: 制限時間のあるコンテンツ（ページの表示期限、入力の制限時間やカルーセルなど）は存在しない
       tech: |
-        関連する項目が「適用なし適合」になります。
+        関連する達成基準が「適用なし適合」になります。
 
     2-2-1b:
       criterion: *c2-2-1
@@ -1076,7 +1078,7 @@ checks:
         - 2-2-2
       name: 動き（カルーセルなど）、点滅、自動更新のあるコンテンツは存在しない
       tech: |
-        関連する項目が「適用なし適合」になります。
+        関連する達成基準が「適用なし適合」になります。
 
     2-2-2b:
       criterion: *c2-2-2
@@ -1109,7 +1111,7 @@ checks:
         - 2-2-3
       name: 制限時間のあるコンテンツ（ページの表示期限、入力の制限時間やカルーセルなど）は存在しない
       tech: |
-        関連する項目が「適用なし適合」になります。
+        関連する達成基準が「適用なし適合」になります。
 
     2-2-3b:
       criterion: *c2-2-3
@@ -1242,7 +1244,7 @@ checks:
         - 2-3-1
       name: 閃光を放つコンテンツは存在しない
       tech: |
-        関連する項目が「適用なし適合」になります。
+        関連する達成基準が「適用なし適合」になります。
 
     2-3-1b:
       criterion: *c2-3-1
@@ -1448,7 +1450,7 @@ checks:
         - 3-1-3
       name: 難しい用語、技術語、言語特有の慣用句が存在しない
       tech: |
-        関連する項目が「適用なし適合」になります。
+        関連する達成基準が「適用なし適合」になります。
 
     3-1-3b:
       criterion: *c3-1-3
@@ -1481,7 +1483,7 @@ checks:
         - 3-1-4
       name: 略語が存在しない
       tech: |
-        関連する項目が「適用なし適合」になります。
+        関連する達成基準が「適用なし適合」になります。
 
     3-1-4b:
       criterion: *c3-1-4
@@ -1629,7 +1631,7 @@ checks:
         - 3-3-1
       name: フォーム（サイト内検索なども含む）は存在しない
       tech: |
-        関連する項目が「適用なし適合」になります
+        関連する達成基準が「適用なし適合」になります
 
     3-3-1b:
       criterion: *c3-3-1
@@ -1641,7 +1643,7 @@ checks:
       level: *lv1
       name: 必須項目や形式の指定のあるフォームは存在しない
       tech: |
-        関連する項目が「適用なし適合」になります
+        関連する達成基準が「適用なし適合」になります
 
     3-3-1c:
       criterion: *c3-3-1
@@ -1758,7 +1760,7 @@ checks:
         - 3-3-6
       name: フォームが存在しない。あるいは検索フォームのように、情報を送信する目的でないフォームのみ存在する
       tech: |
-        関連する項目が「適用なし適合」になります
+        関連する達成基準が「適用なし適合」になります
 
     3-3-6b:
       criterion: *c3-3-6
