criterions.yml, checks.yml

--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -132,6 +132,8 @@ checks:
           - 1-1-1f
         1-4-7:
           - 1-4-7a
+          - 1-4-7b
+          - 1-4-7c
       non-exist:
         - 1-2-1
         - 1-2-2
@@ -177,6 +179,7 @@ checks:
       pass:
         1-1-1:
           - 1-1-1a
+          - 1-1-1g
           - 1-1-1h
       level: *lv1
       name: <abbr title="Completely Automated Public Turing test to tell Computers and Humans Apart (コンピュータと人間を区別する完全に自動化された公開チューリングテスト)">CAPTCHA</abbr>が存在するが、CAPTCHAであることを説明し、かつさまざまな知覚に対応したCAPTCHAを用意している
@@ -269,9 +272,6 @@ checks:
         1-2-1:
           - 1-2-1a
           - 1-2-1d
-        1-1-1:
-          - 1-1-1b
-          - 1-1-1c
         1-2-2:
           - 1-2-2b
         1-2-3:
@@ -289,7 +289,6 @@ checks:
       pass:
         1-1-1:
           - 1-1-1a
-          - 1-1-1c
         1-2-1:
           - 1-2-1a
       relations:
@@ -309,6 +308,7 @@ checks:
           - 1-1-1a
         1-2-1:
           - 1-2-1a
+          - 1-2-1b
           - 1-2-1d
       level: *lv1
       name: 音声のない映像（GIFアニメーションなど）が存在するが、同等の情報をテキストで提供している
@@ -348,6 +348,8 @@ checks:
     1-2-2b:
       criterion: *c1-2-2
       pass:
+        1-1-1:
+          - 1-1-1a
         1-2-2:
           - 1-2-2a
           - 1-2-2b
@@ -376,7 +378,7 @@ checks:
       tech: |
         講演の収録映像などは、書き起こしテキストを用意すること。テキスト起こしをする際、「聴衆のざわめき」「（笑い）」など、視覚障害者が、映像を理解するのに必要な情報は詳述する必要がある。単純な話者の発話の書き起こしテキストを用意しただけでは、適合とならない。
         書き起こしテキストを用意しない場合は、画面で何が起こっているかの音声解説（副音声）による説明をいれること。この音声解説も、視覚障害者が動画を理解するために、誰が話しているのかなど、詳述すること。
-        1-2-3を適合とするためには、このどちらかを満たす必要が有る。
+        1.2.3を適合とするためには、このどちらかを満たす必要が有る。
 
   1-2-4:
     1-2-4a:
@@ -414,6 +416,8 @@ checks:
       pass:
         1-1-1:
           - 1-1-1a
+        1-2-2:
+          - 1-2-2a
         1-2-5:
           - 1-2-5a
       level: *lv2
@@ -430,6 +434,8 @@ checks:
       pass:
         1-1-1:
           - 1-1-1a
+        1-2-2:
+          - 1-2-2a
         1-2-6:
           - 1-2-6a
       level: *lv3
@@ -443,6 +449,8 @@ checks:
       pass:
         1-1-1:
           - 1-1-1a
+        1-2-2:
+          - 1-2-2a
         1-2-7:
           - 1-2-7a
       level: *lv3
@@ -459,6 +467,8 @@ checks:
       pass:
         1-1-1:
           - 1-1-1a
+        1-2-2:
+          - 1-2-2a
         1-2-8:
           - 1-2-8a
       level: *lv3
@@ -592,8 +602,8 @@ checks:
           - 1-3-3a
       name: 色に依存した情報提供をしていない
       tech: |
-        情報の意味を要素の色、大きさ、位置のみで提供していないこと。
-        NGの例は「丸いボタン」「右のボタン」などが挙げられるが、1.3.1を丁寧に確認していれば、ほぼ満たしている項目になるでしょう。
+        情報の意味を要素の色のみで提供していないこと。
+        NGの例は「必須項目は赤字」「赤字はエラー」などが挙げられるが、1.3.1を丁寧に確認していれば、ほぼ満たしている項目になるでしょう。
 
   1-4-2:
     1-4-2a:
@@ -702,11 +712,14 @@ checks:
       level: *lv2
       non-exist:
         - 1-4-5
+        - 1-4-9
       name: 画像化された文字は使用していない
 
     1-4-5b:
       criterion: *c1-4-5
       pass:
+        1-1-1:
+          - 1-1-1a
         1-4-5:
           - 1-4-5a
           - 1-4-5b
@@ -720,10 +733,14 @@ checks:
     1-4-5c:
       criterion: *c1-4-5
       pass:
+        1-1-1:
+          - 1-1-1a
         1-4-5:
           - 1-4-5a
           - 1-4-5b
           - 1-4-5c
+        1-4-9:
+          - 1-4-9a
       level: *lv2
       name: 画像化された文字はロゴのみである
 
@@ -771,12 +788,17 @@ checks:
         1-4-3:
           - 1-4-3b
       level: *lv3
-      name: コントラストが甘い箇所は、たいへん大きな文字か、ロゴか、誰にとっても意味のない飾りである
+      name: コントラストが甘い箇所は、ロゴか、誰にとっても意味のない飾りである
 
   1-4-7:
     1-4-7a:
       criterion: *c1-4-7
       pass:
+        1-1-1:
+          - 1-1-1a
+          - 1-1-1e
+        1-2-1:
+          - 1-2-1a
         1-4-7:
           - 1-4-7a
           - 1-4-7b
@@ -792,6 +814,11 @@ checks:
     1-4-7b:
       criterion: *c1-4-7
       pass:
+        1-1-1:
+          - 1-1-1a
+          - 1-1-1e
+        1-2-1:
+          - 1-2-1a
         1-4-7:
           - 1-4-7a
           - 1-4-7b
@@ -808,6 +835,11 @@ checks:
     1-4-7c:
       criterion: *c1-4-7
       pass:
+        1-1-1:
+          - 1-1-1a
+          - 1-1-1e
+        1-2-1:
+          - 1-2-1a
         1-4-7:
           - 1-4-7a
           - 1-4-7b
@@ -881,6 +913,8 @@ checks:
     1-4-9a:
       criterion: *c1-4-9
       pass:
+        1-1-1:
+          - 1-1-1a
         1-4-5:
           - 1-4-5a
           - 1-4-5b
@@ -898,8 +932,10 @@ checks:
       pass:
         2-1-1:
           - 2-1-1a
+          - 2-1-1c
         2-1-3:
           - 2-1-3a
+          - 2-1-3c
       level: *lv1
       name: a、inputなど、HTMLの標準的な操作対象の要素しか用いていない
 
@@ -908,6 +944,8 @@ checks:
       pass:
         2-1-1:
           - 2-1-1b
+        2-1-3:
+          - 2-1-3b
       level: *lv1
       name: エンターキーを検知しないJavaScriptのonclick()を用いていない
       tech: |
@@ -917,8 +955,10 @@ checks:
       criterion: *c2-1-1
       pass:
         2-1-1:
+          - 2-1-1a
           - 2-1-1c
         2-1-3:
+          - 2-1-3a
           - 2-1-3c
       level: *lv1
       name: divやspanなど、通常focus対象にならないような要素が操作対象の場合、キーボード操作でもフォーカスし、操作できるようになっている
@@ -931,6 +971,8 @@ checks:
         2-1-1:
           - 2-1-1d
           - 2-1-1e
+        2-1-3:
+          - 2-1-3d
       level: *lv1
       name: キーボードの操作について特定のタイミングを必要とするようなコンポーネントがない
 
@@ -938,7 +980,8 @@ checks:
       criterion: *c2-1-1
       pass:
         2-1-1:
-          - 2-1-1e
+         - 2-1-1d
+         - 2-1-1e
       relations:
         1-1-1:
           - 1-1-1d
@@ -966,8 +1009,10 @@ checks:
       pass:
         2-1-1:
           - 2-1-1a
+          - 2-1-1c
         2-1-3:
           - 2-1-3a
+          - 2-1-3c
       relations:
         2-1-1:
           - 2-1-1a
@@ -991,8 +1036,10 @@ checks:
       criterion: *c2-1-3
       pass:
         2-1-1:
+          - 2-1-1a
           - 2-1-1c
         2-1-3:
+          - 2-1-3a
           - 2-1-3c
       relations:
         2-1-1:
@@ -1004,9 +1051,10 @@ checks:
       criterion: *c2-1-3
       pass:
         2-1-1:
-          - 2-1-1c
+          - 2-1-1d
+          - 2-1-1e
         2-1-3:
-          - 2-1-3c
+          - 2-1-3d
       relations:
         2-1-1:
           - 2-1-1d
@@ -1021,11 +1069,17 @@ checks:
           - 2-2-1a
           - 2-2-1b
           - 2-2-1c
+        2-2-2:
+          - 2-2-2a
         2-2-3:
           - 2-2-3a
+          - 2-2-3b
+          - 2-2-3c
+          - 2-2-3d
       level: *lv1
       non-exist:
         - 2-2-1
+        - 2-2-3
       name: 制限時間のあるコンテンツ（ページの表示期限、入力の制限時間やカルーセルなど）は存在しない
       tech: |
         関連する達成基準が「適用なし適合」になります。
@@ -1037,6 +1091,8 @@ checks:
           - 2-2-1a
           - 2-2-1b
           - 2-2-1c
+        2-2-3:
+          - 2-2-3a
       level: *lv1
       relations:
         2-2-2:
@@ -1101,13 +1157,20 @@ checks:
     2-2-3a:
       criterion: *c2-2-3
       pass:
+        2-2-1:
+          - 2-2-1a
+          - 2-2-1b
+          - 2-2-1c
         2-2-2:
           - 2-2-2a
         2-2-3:
           - 2-2-3a
           - 2-2-3b
+          - 2-2-3c
+          - 2-2-3d
       level: *lv3
       non-exist:
+        - 2-2-1
         - 2-2-3
       name: 制限時間のあるコンテンツ（ページの表示期限、入力の制限時間やカルーセルなど）は存在しない
       tech: |
@@ -1629,6 +1692,11 @@ checks:
       level: *lv1
       non-exist:
         - 3-3-1
+        - 3-3-2
+        - 3-3-3
+        - 3-3-4
+        - 3-3-5
+        - 3-3-6
       name: フォーム（サイト内検索なども含む）は存在しない
       tech: |
         関連する達成基準が「適用なし適合」になります
@@ -1642,8 +1710,6 @@ checks:
           - 3-3-1c
       level: *lv1
       name: 必須項目や形式の指定のあるフォームは存在しない
-      tech: |
-        関連する達成基準が「適用なし適合」になります
 
     3-3-1c:
       criterion: *c3-3-1
@@ -1678,6 +1744,8 @@ checks:
     3-3-3a:
       criterion: *c3-3-3
       pass:
+        3-3-1:
+          - 3-3-1a
         3-3-3:
           - 3-3-3a
           - 3-3-3b
@@ -1689,6 +1757,8 @@ checks:
     3-3-3b:
       criterion: *c3-3-3
       pass:
+        3-3-1:
+          - 3-3-1a
         3-3-3:
           - 3-3-3a
           - 3-3-3b
@@ -1706,6 +1776,8 @@ checks:
     3-3-4a:
       criterion: *c3-3-4
       pass:
+        3-3-1:
+          - 3-3-1a
         3-3-4:
           - 3-3-4a
           - 3-3-4b
@@ -1717,6 +1789,8 @@ checks:
     3-3-4b:
       criterion: *c3-3-4
       pass:
+        3-3-1:
+          - 3-3-1a
         3-3-4:
           - 3-3-4a
           - 3-3-4b
@@ -1729,6 +1803,8 @@ checks:
     3-3-5a:
       criterion: *c3-3-5
       pass:
+        3-3-1:
+          - 3-3-1a
         3-3-5:
           - 3-3-5a
           - 3-3-5b
@@ -1740,6 +1816,8 @@ checks:
     3-3-5b:
       criterion: *c3-3-5
       pass:
+        3-3-1:
+          - 3-3-1a
         3-3-5:
           - 3-3-5a
           - 3-3-5b
@@ -1752,6 +1830,8 @@ checks:
     3-3-6a:
       criterion: *c3-3-6
       pass:
+        3-3-1:
+          - 3-3-1a
         3-3-6:
           - 3-3-6a
           - 3-3-6b
@@ -1765,6 +1845,8 @@ checks:
     3-3-6b:
       criterion: *c3-3-6
       pass:
+        3-3-1:
+          - 3-3-1a
         3-3-6:
           - 3-3-6a
           - 3-3-6b
