--- a/libs/a11yc/resources/ja/test.yml
+++ b/libs/a11yc/resources/ja/test.yml
@@ -1,11 +1,70 @@
 #about test
 tests:
   doc1:
-    name: ページの選出方法
+    name: レベルの決め方
     tech: |
-      ページの選出方法
+      達成レベルはレベルA、レベルAA、レベルAAAの三つがあります。
+      レベルAには、「1.1.1 非テキストコンテンツ（文字でないコンテンツなので、視覚障害者のスクリーンリーダの対象とならず、特別の配慮がないと視覚障害者が情報を全く取得できないもの）」や「2.1.2 キーボードトラップなし（キーボードではまったくアクセスできないコンテンツを作ってしまうと、キーボーボしか利用できないユーザを阻害してしまうことがある）」「2.3 発作の防止（ページ内で閃光を放つコンテンツがあると、利用者の中にはてんかんの症状を起こしてしまうことがある）」など、いわば「最低限配慮すべき達成基準」がまとまっています。
+      レベルAAでは、レベルAでは予算や工数的に対応が難しいが、対応することが望ましい項目が追加されます。たとえば天気予報等ライブの動画へのキャプションの付与（1.2.4）や、収録済みの動画への音声解説の付与（1.2.5）などが求められるようになります。
+      レベルAAAでは、収録済みの動画への手話の付与（1.2.6）や、難しい言葉の利用への配慮（3.1.3や3.1.5）など、かなり高度な対応を求められます。一般的な方針としてこのレベルを目標とすることは推奨されていません。
+      総務省が提供する「みんなの公共サイト運用ガイドライン（2016年版）」では、公的サイトではレベルAAへの準拠を推奨しています。
+    urls:
+      -
+        name: みんなの公共サイト運用ガイドライン（2016年版）
+        url: http://www.soumu.go.jp/main_sosiki/joho_tsusin/b_free/guideline.html
 
   doc2:
-    name: 試験対象のページ
+    name: 適合、準拠、一部準拠、配慮
     tech: |
-      テスト対象のページ
+      JIS X 8341-3:2016は、JISマーク表示制度の対象規格ではないので、いわゆる「JISマーク」を付与することはできません。また「適合」の表記に関しても、JIS Q 17050-1およびJIS Q 17050-2に沿った適合性評価を経ないと、表記できないことになっています。
+      これを救済する形で、「準拠」という対応度の表記が生まれました。
+      「準拠」は、試験の実施し、達成基準を満たしていることが確認できれば表記できます。
+      「一部準拠」は、試験を実施し、達成基準の一部を満たしていることが確認できれば表記できます。
+      「配慮」は、試験の実施は不要ですが、アクセシビリティ方針を掲げている必要があります。
+      「準拠」「一部準拠」のいずれもアクセシビリティ方針を掲げることを義務付けています。
+    urls:
+      -
+        name: ウェブコンテンツの JIS X 8341-3:2016 対応度表記ガイドライン
+        url: http://waic.jp/docs/jis2016/compliance-guidelines/201603/
+
+  doc3:
+    name: ページの選出方法「ウェブページ単位」
+    tech: |
+      「ウェブページ単位」でのチェックの場合は、チェック対象のページ内すべてを対象とする必要があります。たとえば「動画を除く」といった対応をしてはいけません。コメント欄など、ページ作成者が手を出せない項目によってレベルを達成できない場合は、「部分適合」を宣言してください。
+      「ウェブページ単位」でのチェックの場合、その対象のページが一連のプロセスの一部である場合は、一連のプロセスを対象とするようにしてください。たとえばショッピングカートの決済のプロセスがこれにあたります。
+      このシステムでは、「ウェブページ単位」を対象としている場合は、サイト全体のアクセシビリティ報告書は生成されません。
+    urls:
+      -
+        name: JIS X 8341-3:2016 試験実施ガイドライン
+        url: http://waic.jp/docs/jis2016/test-guidelines/201604/
+
+  doc4:
+    name: ページの選出方法「ウェブページ一式単位」
+    tech: |
+      「ウェブページ一式単位」でのチェックの場合は、「全て」「ランダム」「代表的なページ」「ランダム＋代表的なページ」の何れを対象としているか明示しましょう。
+      「全て」は文字通り全てのページを対象とします。
+      ウェブサイトの規模が100ページを超えるようなサイトの場合は、「ランダム＋代表的なページ」が、推奨されています。「代表的なページ」には、トップページは当然ですが、サイトの中で主要なコンテンツであると考えられるページを対象に含めるようにしてください。
+      「ランダム」および「ランダム＋代表的なページ」における抽出数の目安は、40ページほどを目安とすると安全です。
+    urls:
+      -
+        name: JIS X 8341-3:2016 試験実施ガイドライン
+        url: http://waic.jp/docs/jis2016/test-guidelines/201604/
+
+  doc5:
+    name: アクセシビリティ方針
+    tech: |
+      アクセシビリティに配慮をしているサイトは、アクセシビリティ方針を公開すると良いでしょう。アクセシビリティ方針には、「どのサイトを対象とするか（URLとサイト名の記載）」「サイト内のどのページのアクセシビリティを重視するか」「除外する項目（PDFや動画など）の有無」「目標とする達成レベルと達成予定期日」などを記載することが推奨されています。
+    urls:
+      -
+        name: ウェブアクセシビリティ方針策定ガイドライン 2013年8月版
+        url: http://waic.jp/docs/jis2010/accessibility-plan-guidelines/201308/index.html
+
+  doc6:
+    name: アクセシビリティ・サポーテッド
+    tech: |
+      一般的なブラウザなどで利用可能な実装方法である場合、「アクセシビリティ・サポーテッドである」と言えます。
+      アクセシビリティ・サポーテッド情報は、ウェブアクセシビリティ基盤委員会が提供しているAS情報で確認できます。
+    urls:
+      -
+        name: アクセシビリティ・サポーテッド（AS）情報
+        url: http://waic.jp/docs/as/
