--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -27,3 +27,7 @@ errors:
     message: 見出しの降順が妥当ではありません
     criterion: 1-3-1
     code: 1-3-1a
+  is_not_same_alt_and_filename_of_img:
+    message: img要素のalt属性値がファイル名と同一です
+    criterion: 1-1-1
+    code: 1-1-1b
