--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -31,3 +31,19 @@ errors:
     message: img要素のalt属性値がファイル名と同一です
     criterion: 1-1-1
     code: 1-1-1b
+  is_not_exists_ja_word_breaking_space:
+    message: 空白による整形の可能性があります
+    criterion: 1-3-2
+    code: 1-3-2b
+  is_not_exists_meanless_element:
+    message: 意味づけのないHTML要素を使っています
+    criterion: 1-3-1
+    code: 1-3-1a
+  is_not_style_for_structure:
+    message: 色や大きさに依存した情報提供の可能性があります
+    criterion: 1-3-1
+    code: 1-3-1a
+  tell_user_file_type:
+    message: リンク先がファイルの場合、ファイルの形式やファイルサイズを明記した方が親切です
+    criterion: 1-3-1
+    code: 1-3-1a
